--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
     <!-- Strings related to Settings -->
 
-    <!-- Example General settings -->
+    <!-- Example General settings_general -->
     <string name="pref_header_general">General</string>
 
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
@@ -31,7 +31,7 @@
         <item>-1</item>
     </string-array>
 
-    <!-- Example settings for Data & Sync -->
+    <!-- Example settings_general for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
@@ -54,7 +54,7 @@
 
     <string name="pref_title_system_sync_settings">System sync settings</string>
 
-    <!-- Example settings for Notifications -->
+    <!-- Example settings_general for Notifications -->
     <string name="pref_header_notifications">Notifications</string>
 
     <string name="pref_title_new_message_notifications">New message notifications</string>
@@ -69,4 +69,30 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_main3">Main3Activity</string>
+    <string name="title_activity_another_settings">Settings</string>
+
+    <string name="wifi_title">Wi-Fi</string>
+    <string name="wifi_summary">Вкл. или выкл. сеть WiFi</string>
+    <string name="hints_title">Подсказки</string>
+    <string name="hints_summary">Показывать подсказки</string>
+
+
+
+// Vlad's settings
+    <string name="pref_title_ui_language">UI Language</string>
+    <string name="pref_guide_language_title">Show Guides by Languages</string>
+    <string name="pref_notifications_summary">Get notificatins about closed guide</string>
+    <string name="pref_notifications_title">Notifications</string>
+    <string name="pref_ui_language_summary">Choose the language of the user interface</string>
+    <string name="pref_guide_language_summary">Choose guides according to you language</string>
+    <string-array name="pref_ui_language_list_titles">
+        <item>English</item>
+        <item>Russian</item>
+    </string-array>
+    <string-array name="pref_ui_language_list_values">
+        <item>0</item>
+        <item>-1</item>
+    </string-array>
+
+
 </resources>
