--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,8 +77,7 @@
     <string name="hints_summary">Показывать подсказки</string>
 
 
-
-// Vlad's settings
+    // Vlad's settings
     <string name="pref_title_ui_language">UI Language</string>
     <string name="pref_guide_language_title">Show Guides by Languages</string>
     <string name="pref_notifications_summary">Get notificatins about closed guide</string>
@@ -93,6 +92,10 @@
         <item>0</item>
         <item>-1</item>
     </string-array>
+    <string name="title_activity_tab">TabActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
